# ticos-agent-esp32

./: CMakeLists.txt  Kconfig  README.md  component.mk  idf_component.yml
include/: ticos_agent.h  ticos_audio.h
src/: ticos_agent.c  ticos_audio.c
